--- a/about.html
+++ b/about.html
@@ -206,15 +206,15 @@
             Some examples of committees where our members are involved are:
           </div>
 
-          <ul>
+          <ul class="arrow">
             <li>
               <span
                 class="iconify"
                 data-icon="bi:arrow-right-circle-fill"
                 style="color: #40ba7b"
                 data-width="26"
-              ></span
-              >International Trade Committee
+              ></span>
+              <span class="text">International Trade Committee</span>
             </li>
             <li>
               <span
@@ -222,8 +222,11 @@
                 data-icon="bi:arrow-right-circle-fill"
                 style="color: #40ba7b"
                 data-width="26"
-              ></span
-              >G.10 Alliance (Exclusive Club of Top players in each subsector)
+              ></span>
+              <span class="text"
+                >G.10 Alliance (Exclusive Club of Top players in each
+                subsector)</span
+              >
             </li>
             <li>
               <span
@@ -231,8 +234,11 @@
                 data-icon="bi:arrow-right-circle-fill"
                 style="color: #40ba7b"
                 data-width="26"
-              ></span
-              >G.10 Alliance (Exclusive Club of Top players in each subsector)
+              ></span>
+              <span class="text"
+                >G.10 Alliance (Exclusive Club of Top players in each
+                subsector)</span
+              >
             </li>
             <li>
               <span
@@ -240,8 +246,8 @@
                 data-icon="bi:arrow-right-circle-fill"
                 style="color: #40ba7b"
                 data-width="26"
-              ></span
-              >Future of Finance Group
+              ></span>
+              <span class="text">Future of Finance Group</span>
             </li>
             <li>
               <span
@@ -249,8 +255,8 @@
                 data-icon="bi:arrow-right-circle-fill"
                 style="color: #40ba7b"
                 data-width="26"
-              ></span
-              >Legal Services Network
+              ></span>
+              <span class="text">Legal Services Network</span>
             </li>
             <li>
               <span
@@ -258,8 +264,8 @@
                 data-icon="bi:arrow-right-circle-fill"
                 style="color: #40ba7b"
                 data-width="26"
-              ></span
-              >Research Network
+              ></span>
+              <span class="text">Research Network</span>
             </li>
           </ul>
         </div>
@@ -270,49 +276,49 @@
       <div class="md_heading">Board of Directors</div>
       <div class="number_cards">
         <div>
-          <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
+          <div class="sm_heading name">Aigboje Aig-Imoukhuede</div>
           <div class="bold">Chairman</div>
           <div class="thin">Tengen Family Office</div>
         </div>
         <div>
-          <div class="sm_heading">Obi Ibekwe</div>
+          <div class="sm_heading name">Obi Ibekwe</div>
           <div class="bold">Chief Executive Officer</div>
           <div class="thin">EnterpriseNGR</div>
         </div>
         <div>
-          <div class="sm_heading">Banjo Adegbohungbe</div>
+          <div class="sm_heading name">Banjo Adegbohungbe</div>
           <div class="bold">Director</div>
           <div class="thin">Coronation Merchant Bank</div>
         </div>
         <div>
-          <div class="sm_heading">Bola Onadele Koko</div>
+          <div class="sm_heading name">Bola Onadele Koko</div>
           <div class="bold">Director</div>
           <div class="thin">FMDQ Group</div>
         </div>
         <div>
-          <div class="sm_heading">Bolaji Balogun</div>
+          <div class="sm_heading name">Bolaji Balogun</div>
           <div class="bold">Director</div>
           <div class="thin">Chapelhill Denham</div>
         </div>
         <div>
-          <div class="sm_heading">Gbenga Oyebode</div>
+          <div class="sm_heading name">Gbenga Oyebode</div>
           <div class="bold">Director</div>
           <div class="thin">Aluko & Oyebode</div>
         </div>
         <div>
-          <div class="sm_heading">Kayode Akinkugbe</div>
+          <div class="sm_heading name">Kayode Akinkugbe</div>
           <div class="bold">Director</div>
           <div class="thin">FBNQuest Merchant Bank</div>
         </div>
         <div>
-          <div class="sm_heading">Oscar Onyema</div>
+          <div class="sm_heading name">Oscar Onyema</div>
           <div class="bold">Director</div>
           <div class="thin">NGX Group</div>
         </div>
       </div>
     </section>
 
-    <section class="latest_news">
+    <section class="latest_news hover">
       <div class="news">
         <div class="news">
           <div class="md_heading">Our Team</div>
@@ -326,42 +332,102 @@
               <div class="image">
                 <img src="/images/Rectangle 83.png" alt="" />
               </div>
-              <div class="sm_heading text">Obi Ibekwe</div>
+              <div class="sm_heading text">
+                Obi Ibekwe |
+                <a href=""
+                  ><span
+                    class="iconify-inline link"
+                    data-icon="logos:linkedin-icon"
+                    style="color: black"
+                    data-width="12"
+                  ></span
+                ></a>
+              </div>
               <div class="bold text">Chief Executive Officer</div>
             </div>
             <div class="card">
               <div class="image">
                 <img src="/images/Rectangle 83.png" alt="" />
               </div>
-              <div class="sm_heading text">Lami Adekola |</div>
+              <div class="sm_heading text">
+                Lami Adekola |
+                <a href=""
+                  ><span
+                    class="iconify-inline link"
+                    data-icon="logos:linkedin-icon"
+                    style="color: black"
+                    data-width="12"
+                  ></span
+                ></a>
+              </div>
               <div class="bold text">Director, Policy & Public Affairs</div>
             </div>
             <div class="card">
               <div class="image">
                 <img src="/images/Rectangle 83.png" alt="" />
               </div>
-              <div class="sm_heading text">Uchechi Akinwale-Oluwole |</div>
+              <div class="sm_heading text">
+                Uchechi Akinwale-Oluwole |
+                <a href=""
+                  ><span
+                    class="iconify-inline link"
+                    data-icon="logos:linkedin-icon"
+                    style="color: black"
+                    data-width="12"
+                  ></span
+                ></a>
+              </div>
               <div class="bold text">Head, Corporate Services</div>
             </div>
             <div class="card">
               <div class="image">
                 <img src="/images/Rectangle 83.png" alt="" />
               </div>
-              <div class="sm_heading text">Oge Nnaife |</div>
+              <div class="sm_heading text">
+                Oge Nnaife |
+                <a href=""
+                  ><span
+                    class="iconify-inline link"
+                    data-icon="logos:linkedin-icon"
+                    style="color: black"
+                    data-width="12"
+                  ></span
+                ></a>
+              </div>
               <div class="bold text">Director, Programs</div>
             </div>
             <div class="card">
               <div class="image">
                 <img src="/images/Rectangle 83.png" alt="" />
               </div>
-              <div class="sm_heading text">Tayo Muritala |</div>
+              <div class="sm_heading text">
+                Tayo Muritala |
+                <a href=""
+                  ><span
+                    class="iconify-inline link"
+                    data-icon="logos:linkedin-icon"
+                    style="color: black"
+                    data-width="12"
+                  ></span
+                ></a>
+              </div>
               <div class="bold text">Head, Research</div>
             </div>
             <div class="card">
               <div class="image">
                 <img src="/images/Rectangle 83.png" alt="" />
               </div>
-              <div class="sm_heading text">Sochi Azuh |</div>
+              <div class="sm_heading text">
+                Sochi Azuh |
+                <a href=""
+                  ><span
+                    class="iconify-inline link"
+                    data-icon="logos:linkedin-icon"
+                    style="color: black"
+                    data-width="12"
+                  ></span
+                ></a>
+              </div>
               <div class="bold text">Head, Corporate Comms & Branding</div>
             </div>
           </div>
@@ -454,37 +520,13 @@
           <div><a href="about.html">About EnterpriseNGR</a></div>
           <div class="social_icons">
             <div class="item">
-              <a href=""
-                ><span
-                  class="iconify"
-                  data-icon="entypo-social:facebook-with-circle"
-                  style="color: #00a855"
-                  data-width="35"
-                  data-height="35"
-                ></span
-              ></a>
+              <a href=""><img src="/images/Vector.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""
-                ><span
-                  class="iconify"
-                  data-icon="entypo-social:instagram-with-circle"
-                  style="color: #00a855"
-                  data-width="35"
-                  data-height="35"
-                ></span
-              ></a>
+              <a href=""><img src="/images/ig.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""
-                ><span
-                  class="iconify"
-                  data-icon="ant-design:twitter-circle-filled"
-                  style="color: #00a855"
-                  data-width="35"
-                  data-height="35"
-                ></span
-              ></a>
+              <a href=""><img src="/images/twitter.png" alt="" /></a>
             </div>
           </div>
         </div>
