--- a/agenda.html
+++ b/agenda.html
@@ -150,11 +150,10 @@
       <div class="number_cards">
         <div>
           <div class="md_heading">1.</div>
-          <div class="md_heading">Financial Inclusion</div>
+          <div class="md_heading">Sustainability</div>
           <div>
-            Ensure that individuals and businesses have access to appropriate,
-            affordable, and timely financial products and services, some of
-            which include banking, loan, equity insurance products, etc.
+            Encourage the sector to marry environmental, social, and governance
+            (ESG) principles into their operations and investment philosophies.
           </div>
         </div>
         <div>
@@ -177,7 +176,7 @@
         </div>
         <div>
           <div class="md_heading">4.</div>
-          <div class="md_heading">International trade and investment</div>
+          <div class="md_heading">International trade & investment</div>
           <div>
             Publicize Nigeria as a major destination for international trade and
             investment and enable easy transactions.
@@ -185,10 +184,11 @@
         </div>
         <div>
           <div class="md_heading">5.</div>
-          <div class="md_heading">Sustainability</div>
+          <div class="md_heading">Financial Inclusion</div>
           <div>
-            Encourage the sector to marry environmental, social, and governance
-            (ESG) principles into their operations and investment philosophies.
+            Ensure that individuals and businesses have access to appropriate,
+            affordable, and timely financial products and services, some of
+            which include banking, loan, equity insurance products, etc.
           </div>
         </div>
       </div>
@@ -228,15 +228,25 @@
       <div class="number_cards">
         <div>
           <div class="md_heading">1.</div>
-          <div class="md_heading">Research & Policy</div>
+          <div class="md_heading">Intervention</div>
           <div>
-            Establish thought leadership through robust research and
-            publications, speaking at key industry events, and strategic media
-            appearances across key online and offline platforms.
+            EnterpriseNGR will intervene in key sectors of the economy through
+            driving joint investment allocation, promoting investment, and
+            proprietary initiatives amongst others. To be the change agent for
+            the growth we are advocating for.
           </div>
         </div>
         <div>
           <div class="md_heading">2.</div>
+          <div class="md_heading">Standards</div>
+          <div>
+            We will advocate for the highest standards in EnterpriseNGR and the
+            sector while delivering quality self-regulatory initiatives hinged
+            on evidence and global standards.
+          </div>
+        </div>
+        <div>
+          <div class="md_heading">3.</div>
           <div class="md_heading">Advocacy</div>
           <div>
             We will ensure regular stakeholder engagement, organize regular
@@ -245,7 +255,7 @@
           </div>
         </div>
         <div>
-          <div class="md_heading">3.</div>
+          <div class="md_heading">4.</div>
           <div class="md_heading">Partnership</div>
           <div>
             We will build strong partnerships with other associations within the
@@ -256,22 +266,12 @@
           </div>
         </div>
         <div>
-          <div class="md_heading">4.</div>
-          <div class="md_heading">Intervention</div>
-          <div>
-            EnterpriseNGR will intervene in key sectors of the economy through
-            driving joint investment allocation, promoting investment, and
-            proprietary initiatives amongst others. To be the change agent for
-            the growth we are advocating for.
-          </div>
-        </div>
-        <div>
           <div class="md_heading">5.</div>
-          <div class="md_heading">Standards</div>
+          <div class="md_heading">Research & Policy</div>
           <div>
-            We will advocate for the highest standards in EnterpriseNGR and the
-            sector while delivering quality self-regulatory initiatives hinged
-            on evidence and global standards.
+            Establish thought leadership through robust research and
+            publications, speaking at key industry events, and strategic media
+            appearances across key online and offline platforms.
           </div>
         </div>
         <div>
@@ -444,37 +444,13 @@
           <div><a href="about.html">About EnterpriseNGR</a></div>
           <div class="social_icons">
             <div class="item">
-              <a href=""
-                ><span
-                  class="iconify"
-                  data-icon="entypo-social:facebook-with-circle"
-                  style="color: #00a855"
-                  data-width="35"
-                  data-height="35"
-                ></span
-              ></a>
+              <a href=""><img src="/images/Vector.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""
-                ><span
-                  class="iconify"
-                  data-icon="entypo-social:instagram-with-circle"
-                  style="color: #00a855"
-                  data-width="35"
-                  data-height="35"
-                ></span
-              ></a>
+              <a href=""><img src="/images/ig.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""
-                ><span
-                  class="iconify"
-                  data-icon="ant-design:twitter-circle-filled"
-                  style="color: #00a855"
-                  data-width="35"
-                  data-height="35"
-                ></span
-              ></a>
+              <a href=""><img src="/images/twitter.png" alt="" /></a>
             </div>
           </div>
         </div>
