--- a/index.html
+++ b/index.html
@@ -356,16 +356,13 @@
         <div><a href="about.html">About EnterpriseNGR</a></div>
         <div class="social_icons">
           <div class="item">
-            <a href=""
-              ><span class="iconify" data-icon="entypo-social:facebook-with-circle" style="color: #00a855;" data-width="35" data-height="35"></span></a>
+            <a href=""><img src="/images/Vector.png" alt="" /></a>
           </div>
           <div class="item">
-            <a href=""
-              ><span class="iconify" data-icon="entypo-social:instagram-with-circle" style="color: #00a855;" data-width="35" data-height="35"></span></a>
+            <a href=""><img src="/images/ig.png" alt="" /></a>
           </div>
           <div class="item">
-            <a href=""
-              ><span class="iconify" data-icon="ant-design:twitter-circle-filled" style="color: #00a855;" data-width="35" data-height="35"></span></a>
+            <a href=""><img src="/images/twitter.png" alt="" /></a>
           </div>
         </div>
       </div>
