--- a/policy.html
+++ b/policy.html
@@ -135,46 +135,22 @@
         </div>
         <div class="column">
           <div>Our Interventions</div>
-          <div>Membership</div>
-          <div>Policy & Research</div>
-          <div>News & Events</div>
+          <div><a href="member.html"></a>Membership</div>
+          <div><a href="policy.html"></a>Policy & Research</div>
+          <div><a href="news.html"></a>News & Events</div>
         </div>
         <div class="column">
           <div><a href="contact.html">Contact Us</a></div>
           <div><a href="about.html">About EnterpriseNGR</a></div>
           <div class="social_icons">
             <div class="item">
-              <a href=""
-                ><span
-                  class="iconify"
-                  data-icon="entypo-social:facebook-with-circle"
-                  style="color: #00a855"
-                  data-width="35"
-                  data-height="35"
-                ></span
-              ></a>
+              <a href=""><img src="/images/Vector.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""
-                ><span
-                  class="iconify"
-                  data-icon="entypo-social:instagram-with-circle"
-                  style="color: #00a855"
-                  data-width="35"
-                  data-height="35"
-                ></span
-              ></a>
+              <a href=""><img src="/images/ig.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""
-                ><span
-                  class="iconify"
-                  data-icon="ant-design:twitter-circle-filled"
-                  style="color: #00a855"
-                  data-width="35"
-                  data-height="35"
-                ></span
-              ></a>
+              <a href=""><img src="/images/twitter.png" alt="" /></a>
             </div>
           </div>
         </div>
