--- a/agenda.html
+++ b/agenda.html
@@ -435,9 +435,9 @@
         </div>
         <div class="column">
           <div>Our Interventions</div>
-          <div>Membership</div>
-          <div>Policy & Research</div>
-          <div>News & Events</div>
+          <div><a href="member.html"></a>Membership</div>
+          <div><a href="policy.html"></a>Policy & Research</div>
+          <div><a href="news.html"></a>News & Events</div>
         </div>
         <div class="column">
           <div><a href="contact.html">Contact Us</a></div>
