--- a/member.html
+++ b/member.html
@@ -421,9 +421,9 @@
         </div>
         <div class="column">
           <div>Our Interventions</div>
-          <div><a href="member.html"></a>Membership</div>
-          <div><a href="policy.html"></a>Policy & Research</div>
-          <div><a href="news.html"></a>News & Events</div>
+          <div><a href="member.html">Membership</a></div>
+          <div><a href="policy.html">Policy & Research</a></div>
+          <div><a href="news.html">News & Events</a></div>
         </div>
         <div class="column">
           <div><a href="contact.html">Contact Us</a></div>
