--- a/member.html
+++ b/member.html
@@ -13,33 +13,26 @@
   </head>
   <body>
     <header class="header">
-      <div class="Nav-wrapper">
-        <div class="logo">
-          <a href="index.html"
-            ><img src="/images/EnterpriseNGRLogo.png" alt=""
-          /></a>
-        </div>
-        <nav>
-          <input type="checkbox" id="show-search" />
-          <input type="checkbox" id="show-menu" />
-          <label for="show-menu" class="menu-icon"
-            ><i class="fas fa-bars"></i>
-          </label>
-          <div class="content">
-            <ul class="links">
-              <li>
-                <a href="about.html">About Us </a>
-              </li>
-              <li><a href="agenda.html">Our Agenda</a></li>
-              <li><a href="member.html">Membership</a></li>
-              <li><a href="policy.html">Policy & Research</a></li>
-              <li><a href="greenstart.html">Youth Of Enterprise</a></li>
-              <li><a href="news.html">Media & Events</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-          </div>
-        </nav>
-      </div>
+      <nav>
+        <label class="logo"
+          ><a href="index.html"
+            ><img
+              src="/images/EnterpriseNGRLogo.png"
+              alt="EnterpriseNGR_Logo" /></a
+        ></label>
+        <ul id="menu">
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="agenda.html">Our Agenda</a></li>
+          <li><a href="member.html">Membership</a></li>
+          <li><a href="policy.html">Policy & Research</a></li>
+          <li><a href="greenstart.html">Youth of Enterprise</a></li>
+          <li><a href="news.html">Media & Events</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+        <label id="menu-icon">
+          <i class="fas fa-bars"></i>
+        </label>
+      </nav>
 
       <div class="landing_page">
         <div class="heading">Be a</div>
