--- a/greenstart.html
+++ b/greenstart.html
@@ -12,38 +12,31 @@
     <title>Get your green start</title>
   </head>
   <body>
-    <header class="header">
-      <div class="Nav-wrapper">
-        <div class="logo">
-          <a href="index.html"
-            ><img src="/images/EnterpriseNGRLogo.png" alt=""
-          /></a>
-        </div>
-        <nav>
-          <input type="checkbox" id="show-search" />
-          <input type="checkbox" id="show-menu" />
-          <label for="show-menu" class="menu-icon"
-            ><i class="fas fa-bars"></i>
-          </label>
-          <div class="content">
-            <ul class="links">
-              <li>
-                <a href="about.html">About Us </a>
-              </li>
-              <li><a href="agenda.html">Our Agenda</a></li>
-              <li><a href="member.html">Membership</a></li>
-              <li><a href="policy.html">Policy & Research</a></li>
-              <li><a href="greenstart.html">Youth Of Enterprise</a></li>
-              <li><a href="news.html">Media & Events</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-          </div>
-        </nav>
-      </div>
+    <header class="header greenstart">
+      <nav>
+        <label class="logo"
+          ><a href="index.html"
+            ><img
+              src="/images/EnterpriseNGRLogo.png"
+              alt="EnterpriseNGR_Logo" /></a
+        ></label>
+        <ul id="menu">
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="agenda.html">Our Agenda</a></li>
+          <li><a href="member.html">Membership</a></li>
+          <li><a href="policy.html">Policy & Research</a></li>
+          <li><a href="greenstart.html">Youth of Enterprise</a></li>
+          <li><a href="news.html">Media & Events</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+        <label id="menu-icon">
+          <i class="fas fa-bars"></i>
+        </label>
+      </nav>
 
       <div class="landing_page">
         <div class="heading">Get your</div>
-        <div class="heading">#GreenStart</div>
+        <div class="heading green">#GreenStart</div>
         <p>This is the start of your journey to the career of your dreams.</p>
       </div>
     </header>
@@ -73,7 +66,7 @@
         </div>
 
         <div class="img">
-          <img src="/images/economy.png" alt="Economy" />
+          <img src="/images/greenstart1.png" alt="Economy" />
         </div>
       </div>
     </section>
@@ -148,7 +141,7 @@
           </div>
 
           <div class="img">
-            <img src="/images/economy.png" alt="Economy" />
+            <img src="/images/greenstart3.png" alt="Economy" />
           </div>
         </div>
       </section>
@@ -181,7 +174,7 @@
         </div>
 
         <div class="img">
-          <img src="/images/economy.png" alt="Economy" />
+          <img src="/images/greenstart2.png" alt="Economy" />
         </div>
       </div>
     </section>
