--- a/news.html
+++ b/news.html
@@ -5,37 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
     <title>Document</title>
   </head>
   <body>
     <header class="header">
-      <div class="Nav-wrapper">
-        <div class="logo">
-          <a href="index.html"
-            ><img src="/images/EnterpriseNGRLogo.png" alt=""
-          /></a>
-        </div>
-        <nav>
-          <input type="checkbox" id="show-search" />
-          <input type="checkbox" id="show-menu" />
-          <label for="show-menu" class="menu-icon"
-            ><i class="fas fa-bars"></i>
-          </label>
-          <div class="content">
-            <ul class="links">
-              <li>
-                <a href="about.html">About Us </a>
-              </li>
-              <li><a href="agenda.html">Our Agenda</a></li>
-              <li><a href="member.html">Membership</a></li>
-              <li><a href="policy.html">Policy & Research</a></li>
-              <li><a href="greenstart.html">Youth Of Enterprise</a></li>
-              <li><a href="news.html">Media & Events</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-          </div>
-        </nav>
-      </div>
+      <nav>
+        <label class="logo"
+          ><a href="index.html"
+            ><img
+              src="/images/EnterpriseNGRLogo.png"
+              alt="EnterpriseNGR_Logo" /></a
+        ></label>
+        <ul id="menu">
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="agenda.html">Our Agenda</a></li>
+          <li><a href="member.html">Membership</a></li>
+          <li><a href="policy.html">Policy & Research</a></li>
+          <li><a href="greenstart.html">Youth of Enterprise</a></li>
+          <li><a href="news.html">Media & Events</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+        <label id="menu-icon">
+          <i class="fas fa-bars"></i>
+        </label>
+      </nav>
 
       <section class="landing_page">
         <div class="heading">Media and Events</div>
@@ -256,5 +253,6 @@
       </div>
     </footer>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
