--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
       <div class="economy">
         <div class="economy_grid">
           <div class="img">
-            <img src="/images/economy.png" alt="Economy" />
+            <img src="/images/about1.png" alt="Economy" />
           </div>
 
           <div class="economy_description">
@@ -171,7 +171,7 @@
         </div>
 
         <div class="img history">
-          <img src="/images/economy.png" alt="Economy" />
+          <img src="/images/about2.png" alt="Economy" />
         </div>
       </div>
     </section>
@@ -179,7 +179,7 @@
     <section class="economy">
       <div class="economy_grid">
         <div class="img history">
-          <img src="/images/economy.png" alt="Economy" />
+          <img src="/images/about3.png" alt="Economy" />
         </div>
 
         <div class="economy_description">
@@ -323,7 +323,7 @@
           <div class="cards">
             <div class="card">
               <div class="image">
-                <img src="/images/Rectangle 83.png" alt="" />
+                <img src="/images/ObiIbekwe.png" alt="" />
               </div>
               <div class="sm_heading text">
                 Obi Ibekwe |
@@ -340,24 +340,7 @@
             </div>
             <div class="card">
               <div class="image">
-                <img src="/images/Rectangle 83.png" alt="" />
-              </div>
-              <div class="sm_heading text">
-                Lami Adekola |
-                <a href=""
-                  ><span
-                    class="iconify-inline link"
-                    data-icon="logos:linkedin-icon"
-                    style="color: black"
-                    data-width="12"
-                  ></span
-                ></a>
-              </div>
-              <div class="bold text">Director, Policy & Public Affairs</div>
-            </div>
-            <div class="card">
-              <div class="image">
-                <img src="/images/Rectangle 83.png" alt="" />
+                <img src="/images/uchechiakinwale.png" alt="" />
               </div>
               <div class="sm_heading text">
                 Uchechi Akinwale-Oluwole |
@@ -374,7 +357,25 @@
             </div>
             <div class="card">
               <div class="image">
-                <img src="/images/Rectangle 83.png" alt="" />
+                <img src="/images/lamiadekola.png" alt="" />
+              </div>
+              <div class="sm_heading text">
+                Lami Adekola |
+                <a href=""
+                  ><span
+                    class="iconify-inline link"
+                    data-icon="logos:linkedin-icon"
+                    style="color: black"
+                    data-width="12"
+                  ></span
+                ></a>
+              </div>
+              <div class="bold text">Director, Policy & Public Affairs</div>
+            </div>
+
+            <div class="card">
+              <div class="image">
+                <img src="/images/ogennaife.png" alt="" />
               </div>
               <div class="sm_heading text">
                 Oge Nnaife |
@@ -391,7 +392,7 @@
             </div>
             <div class="card">
               <div class="image">
-                <img src="/images/Rectangle 83.png" alt="" />
+                <img src="/images/tayomuritala.png" alt="" />
               </div>
               <div class="sm_heading text">
                 Tayo Muritala |
@@ -408,7 +409,7 @@
             </div>
             <div class="card">
               <div class="image">
-                <img src="/images/Rectangle 83.png" alt="" />
+                <img src="/images/sochiazuh.png" alt="" />
               </div>
               <div class="sm_heading text">
                 Sochi Azuh |
