--- a/agenda.html
+++ b/agenda.html
@@ -52,7 +52,7 @@
 
       <div class="economy_grid">
         <div class="img">
-          <img src="/images/economy.png" alt="Economy" />
+          <img src="/images/agenda1.png" alt="Economy" />
         </div>
 
         <div class="economy_description">
