--- a/greenstart.html
+++ b/greenstart.html
@@ -66,7 +66,7 @@
         </div>
 
         <div class="img">
-          <img src="/images/greenstart1.png" alt="Economy" />
+          <img src="/images/yoe1.png" alt="Economy" />
         </div>
       </div>
     </section>
