--- a/member.html
+++ b/member.html
@@ -12,7 +12,7 @@
     <title>Membership</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header bg">
       <nav>
         <label class="logo"
           ><a href="index.html"
