--- a/newsitem.html
+++ b/newsitem.html
@@ -247,6 +247,7 @@
         <div>© 2022 EnterpriseNGR - All Rights Reserved</div>
       </div>
     </footer>
+    <script src="/js/main.js"></script>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   </body>
 </html>
