--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 
       <div class="economy_grid">
         <div class="img">
-          <img src="/images/economy.png" alt="Economy" />
+          <img src="/images/about001.png" alt="Economy" />
         </div>
 
         <div class="economy_description">
