--- a/member.html
+++ b/member.html
@@ -117,7 +117,7 @@
             >
           </div>
           <div class="img">
-            <img src="/images/economy.png" alt="" />
+            <img src="/images/member002.png" alt="" />
           </div>
         </div>
       </div>
